# journalfeed2pdf

./: .envrc  .gitignore  Article.py  LaTeX.py  README.md  README.org  content.tex  debug.ipynb  flake.nix  getcontent.py  journalfeed2pdf.sh  main.tex  setup.cfg  setup.py  test_elc.py  tests.ipynb
.github/workflows/: CI.yml
src/: config.json  main.py  preamble.tex
src/journalfeed/: Article.py  LaTeX.py  __main__.py  aps.py  arxiv.py  config.json  config.py  filter.json  helpers.py  nature.py  science.py  sources.json
tests/: elc.py
