[metadata]
name = journalfeed-benneti
version = 0.0.1
author = Benedikt Tissot
author_email = benedikt.tissot@googlemail.com
description = Generate a journalfeed as a latex document
long_description = file: README.org
long_description_content_type = text/org
url = https://github.com/benneti/journalfeed2pdf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3+
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
