[metadata]
name = journalfeed
version = 0.0.1
author = Benedikt Tissot
author_email = benedikt.tissot@googlemail.com
description = Generate a journalfeed as a latex document
long_description = file: README.org
long_description_content_type = text/org
url = https://github.com/benneti/journalfeed2pdf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3+
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
# scripts =
#     src/__main__.py
python_requires = >=3.6
install_requires =
    feedparser
    beautifulsoup4
    requests
    python-dateutil

[options.entry_points]
console_scripts =
    journalfeed2tex = journalfeed.__main__:main

[options.packages.find]
where=src

[options.package_data]
* = *.org, *.json
